Fixed global-panel z-index, logout button and spinner for settings and testcases

--- a/client/src/sass/components/_global-panel.scss
+++ b/client/src/sass/components/_global-panel.scss
@@ -1,9 +1,9 @@
 .global-panel {
-  position: relative;
+  position: fixed;
   display: flex;
   flex-direction: row;
   padding-top: 16px;
-
+  z-index: 99;
   top: 0;
   left: 0;
   width: 8rem;
@@ -101,6 +101,7 @@
   position: fixed;
   left: 10px;
   bottom: 10px;
+
   &:focus {
     outline: none;
   }
@@ -115,13 +116,14 @@
   border-radius: 62px;
   transition: all 300ms;
   box-shadow: 2px 2px 5px rgb(25, 73, 15);
+
   &:focus {
     outline: none;
   }
 }
 
 .right-corder-container .right-corder-container-button span {
-  font-size: 20px;
+  font-size: 10px;
   color: white;
 
   line-height: 28px;
@@ -130,8 +132,8 @@
 .right-corder-container .right-corder-container-button:hover {
   transition: all 400ms cubic-bezier(0.62, 0.1, 0.5, 1);
   width: 200px;
-  border-top-right-radius: 5px;
-  border-bottom-right-radius: 5px;
+  border-top-right-radius: 4px;
+  border-bottom-right-radius: 4px;
 }
 
 .right-corder-container .right-corder-container-button .long-text {
